--- a/ie_html/ImprovinginteroperabilitywithDOML3XPath.html
+++ b/ie_html/ImprovinginteroperabilitywithDOML3XPath.html
@@ -1,8 +1,6 @@
-<html><head>
-<meta charset='UTF-8'>
-<link href='resource/bootstrap.min.css' rel='Stylesheet' type='text/css' />
-<link href='resource/style.css' rel='Stylesheet' type='text/css' />
-</head>
+---
+layout: default
+---
 <body>
 <div id='page'>
 <h1 class='entry-title'>Improving interoperability with DOM L3 XPath</h1>
@@ -63,7 +61,4 @@
 <p>Our new rendering engine now has support for XPath to run the modern Web to enable more functionality and show more content for our customers. With data-driven development from the modern Web, we landed on a data-driven outcome of a low-cost and performant implementation on existing technologies and standards as well as open source code. Grab the latest flight of the <a href="http://insider.windows.com/">Windows 10 Technical Preview</a> to try for yourself! You can reach us with feedback via the <a href="https://wpdev.uservoice.com/forums/257854-internet-explorer-platform">Internet Explorer Platform Suggestion Box</a> on UserVoice, <a href="https://twitter.com/iedevchat">@IEDevChat</a> on Twitter, and in the comments below.</p>
 <p>– Thomas Moore, Software Engineer, Internet Explorer Platform</p>
 </div>
-</div></body>
-<script type='text/javascript' src='resource/jquery-1.12.1.min.js'></script>
-<script type='text/javascript' src='resource/replace.js'></script>
-</html>
+</div>
